--- a/desktop.yaml
+++ b/desktop.yaml
@@ -286,7 +286,7 @@ packages:
   - tracker-miners
   - xdg-desktop-portal
   - xdg-desktop-portal-gnome
-  - xdg-desktop-portal-gtk
+  - xdg-desktop-portal-wlr
   - xdg-user-dirs-gtk
   # - yelp
 
@@ -298,8 +298,6 @@ packages:
   - tmux xclip
   - kubectl helm
   - nmap
-  - sunshine
-  - tailscale
   # - libvirt-daemon-kvm libvirt-client virt-viewer
 
   # non-free
