remove version lock for kubelet

--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -7,5 +7,5 @@ remove-from-packages:
 
 packages:
   - containernetworking-plugins
-  - cri-o cri-tools kubelet-1.26.4
+  - cri-o cri-tools kubelet
   - conntrack-tools
