--- a/chromebook.yaml
+++ b/chromebook.yaml
@@ -1,8 +1,13 @@
+# Intel ADL chromebooks
+
 ostree-layers:
   - overlay/03chromebook
 
+# conflicts with audio hack
 remove-from-packages:
   - [alsa-ucm, /usr/share/alsa/ucm2/common/pcm/split.conf]
+  - [alsa-ucm, /usr/share/alsa/ucm2/codecs/hda/hdmi.conf]
+  - [alsa-sof-firmware, /usr/lib/firmware/intel/sof-tplg/sof-rpl-rt711.tplg.xz]
 
 packages:
   - alsa-sof-firmware
