fix iommu kargs

--- a/image-coreos.yaml
+++ b/image-coreos.yaml
@@ -1,9 +1,8 @@
 size: 1
 
 extra-kargs:
-  - intel_iommu=on
-  - amd_iommu=on
   - iommu=pt
+  - amd_iommu=pt
   - rd.driver.pre=vfio-pci
   - numa=off
   - enforcing=0
