render manifests from templates

--- a/image-coreos.yaml
+++ b/image-coreos.yaml
@@ -1,12 +1,3 @@
-size: 1
-
-extra-kargs:
-  - iommu=pt
-  - amd_iommu=pt
-  - rd.driver.pre=vfio-pci
-  - numa=off
-  - enforcing=0
-
-ignition-network-kcmdline: []
-ostree-remote: fedora
-compressor: xz
+"include":
+- "image-base-coreos.yaml"
+"size": 1
