--- a/image-silverblue-nvidia.yaml
+++ b/image-silverblue-nvidia.yaml
@@ -2,6 +2,5 @@
 - "rd.driver.blacklist=nouveau"
 - "modprobe.blacklist=nouveau"
 - "nvidia_drm.modeset=1"
-"include":
-- "image-base-silverblue-nvidia.yaml"
+"include": "image-base-silverblue-nvidia.yaml"
 "size": 4
