remove vrrp from chromebook build

--- a/kubernetes-coreos.yaml
+++ b/kubernetes-coreos.yaml
@@ -1,6 +1,8 @@
 "packages":
 - "containernetworking-plugins"
-- "cri-o cri-tools kubelet"
+- "cri-o"
+- "cri-tools"
+- "kubelet"
 - "conntrack-tools"
 "remove-from-packages":
 - - "cri-o"
