--- a/image-silverblue-nvidia.yaml
+++ b/image-silverblue-nvidia.yaml
@@ -4,3 +4,4 @@ extra-kargs:
   - rd.driver.blacklist=nouveau
   - modprobe.blacklist=nouveau
   - nvidia_drm.modeset=1
+  - nvidia.NVreg_OpenRmEnableUnsupportedGpus=1
