adapt to using f39 nvidia repo

--- a/snippets/nvidia.yaml
+++ b/snippets/nvidia.yaml
@@ -4,7 +4,8 @@ ostree-layers:
 repos:
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
-  - nvidia
+  - cuda-fedora
+  - cuda-fedora37
 
 remove-from-packages:
   # Add patched files
