use f39 nvidia repo (f40 does not exist)

--- a/snippets/nvidia.yaml
+++ b/snippets/nvidia.yaml
@@ -4,7 +4,7 @@ ostree-layers:
 repos:
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
-  - cuda-fedora
+  - cuda-fedora39
   - nvidia-container-toolkit
 
 remove-from-packages:
