update to use RC kernel

--- a/snippets/nvidia.yaml
+++ b/snippets/nvidia.yaml
@@ -4,7 +4,7 @@ ostree-layers:
 repos:
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
-  - cuda-fedora39
+  - cuda-fedora
   - nvidia-container-toolkit
 
 remove-from-packages:
