--- a/snippets/desktop-environment.yaml
+++ b/snippets/desktop-environment.yaml
@@ -5,7 +5,6 @@ repos:
   - rpmfusion-nonfree-updates
   - selfhosted
   - selfhosted-noarch
-  - kubernetes
 
 remove-from-packages:
   - [podman, /etc/cni/net.d/.*]
@@ -304,7 +303,7 @@ packages:
   - libva-utils
   - vulkan vulkan-tools
   - tmux xclip
-  - kubectl helm
+  - kubernetes-client helm
   - nmap
   - unar
 
