--- a/image-silverblue-nvidia.yaml
+++ b/image-silverblue-nvidia.yaml
@@ -5,4 +5,4 @@ extra-kargs:
   - rd.driver.blacklist=nouveau
   - modprobe.blacklist=nouveau
   - nvidia_drm.modeset=1
-  - nvidia.NVreg_OpenRmEnableUnsupportedGpus=1
+  - nvidia_drm.fbdev=1
