add build for latest and open nvidia kmods

--- a/snippets/nvidia.yaml
+++ b/snippets/nvidia.yaml
@@ -7,7 +7,8 @@ repos:
   - cuda-fedora
 
 packages:
-  - kmod-nvidia-open-dkms
+  - kmod-nvidia-latest-dkms
+  # - kmod-nvidia-open-dkms
   - cuda-drivers
   - nvidia-drivers
   - nvidia-container-toolkit
