--- a/manifest-coreos.yaml
+++ b/manifest-coreos.yaml
@@ -1,7 +1,7 @@
 include:
   - upstream-include.yaml
   - snippets/base.yaml
-  - snippets/vrrp.yaml
+  - snippets/ha.yaml
   - snippets/kubernetes.yaml
   - snippets/release-coreos.yaml
 
