re-add haproxy, add avahi to base image

--- a/snippets/ha.yaml
+++ b/snippets/ha.yaml
@@ -5,9 +5,10 @@ repos:
 remove-from-packages:
   - [conntrack-tools, /etc/conntrackd/conntrackd.conf]
   - [keepalived, /etc/keepalived/keepalived.conf]
-  - [bird, /etc/bird.conf]
+  - [haproxy, /etc/haproxy/haproxy.cfg]
 
 packages:
   - keepalived
+  - haproxy
   - conntrack-tools
   - bird
