--- a/snippets/desktop-environment.yaml
+++ b/snippets/desktop-environment.yaml
@@ -5,7 +5,7 @@ repos:
   - rpmfusion-nonfree-updates
   - selfhosted
   - selfhosted-noarch
-  - fedora-rawhide-nodebug-kernel
+  # - fedora-rawhide-nodebug-kernel
 
 remove-from-packages:
   - [podman, /etc/cni/net.d/.*]
