fix package name

--- a/snippets/nvidia.yaml
+++ b/snippets/nvidia.yaml
@@ -10,6 +10,6 @@ packages:
   # - kmod-nvidia-latest-dkms
   - kmod-nvidia-open-dkms
   - cuda-drivers
-  - nvidia-drivers
+  - nvidia-driver
   - nvidia-container-toolkit
   - libva-nvidia-driver
