--- a/snippets/nvidia.yaml
+++ b/snippets/nvidia.yaml
@@ -4,7 +4,8 @@ ostree-layers:
 repos:
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
-  - cuda-fedora
+  - cuda-fedora-40
+  - cuda-fedora-39
 
 packages:
   # - kmod-nvidia-latest-dkms
