--- a/snippets/nvidia.yaml
+++ b/snippets/nvidia.yaml
@@ -4,8 +4,10 @@ ostree-layers:
 repos:
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
-  - cuda-fedora-40
   - cuda-fedora-39
+  - cuda-fedora-40
+  - fedora-40
+  - fedora-updates-40
 
 packages:
   # - kmod-nvidia-latest-dkms
