--- a/upstream-include.yaml
+++ b/upstream-include.yaml
@@ -1,5 +1,7 @@
 include:
   - manifests/ignition-and-ostree.yaml
+  - manifests/file-transfer.yaml
+  - manifests/kernel.yaml
 
 check-passwd:
   type: "file"
