--- a/snippets/nvidia.yaml
+++ b/snippets/nvidia.yaml
@@ -4,7 +4,7 @@ ostree-layers:
 repos:
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
-  - cuda-fedora-39
+  - cuda-fedora
   - cuda-fedora-40
   - fedora-40
   - fedora-updates-40
