--- a/manifest-coreos.yaml
+++ b/manifest-coreos.yaml
@@ -3,6 +3,7 @@ include:
   - snippets/base.yaml
   - snippets/ha.yaml
   - snippets/kubernetes.yaml
+  - snippets/podman.yaml
   - snippets/release-coreos.yaml
 
 exclude-packages:
