--- a/snippets/nvidia.yaml
+++ b/snippets/nvidia.yaml
@@ -4,10 +4,8 @@ ostree-layers:
 repos:
   - rpmfusion-nonfree
   - rpmfusion-nonfree-updates
-  - cuda-fedora-41
-  - cuda-fedora-40
-  - fedora-40
-  - fedora-updates-40
+  - nvidia-container-toolkit
+  - cuda-fedora
 
 packages:
   - kmod-nvidia-open-dkms
