--- a/snippets/kubernetes.yaml
+++ b/snippets/kubernetes.yaml
@@ -5,6 +5,8 @@ repos:
 remove-from-packages:
   - [cri-o, /etc/cni/net.d/.*]
   - [conntrack-tools, /etc/conntrackd/conntrackd.conf]
+  - [conmon, /usr/bin/conmon]
+  - [crun, /usr/bin/crun]
 
 packages:
   - containernetworking-plugins
