add nvidia packages for container host

--- a/snippets/nvidia.yaml
+++ b/snippets/nvidia.yaml
@@ -9,7 +9,5 @@ repos:
 
 packages:
   - kmod-nvidia-open-dkms
-  - cuda-drivers
-  - nvidia-driver
+  - nvidia-driver-cuda
   - nvidia-container-toolkit
-  - libva-nvidia-driver
