--- a/manifest-coreos-nvidia.yaml
+++ b/manifest-coreos-nvidia.yaml
@@ -11,11 +11,17 @@ exclude-packages:
   - python
   - python2
   - python2-libs
+  - python3
+  - python3-libs
   - perl
+  # - perl-interpreter
   - nodejs
   - dnf
+  # - grubby
   - cowsay
   - initscripts
   - plymouth
+  # - NetworkManager
+  # - NetworkManager-libnm
   - NetworkManager-initscripts-ifcfg-rh
   - PackageKit
