revert removing nvidia modules from initrd

--- a/overlay.d/02nvidia/usr/lib/dracut/dracut.conf.d/nvidia.conf
+++ b/overlay.d/02nvidia/usr/lib/dracut/dracut.conf.d/nvidia.conf
@@ -1,2 +1,2 @@
-omit_drivers+=" nvidia nvidia_modeset nvidia_uvm nvidia_drm "
-# force_drivers+=" nvidia nvidia_modeset nvidia_uvm nvidia_drm "
+# omit_drivers+=" nvidia nvidia_modeset nvidia_uvm nvidia_drm "
+force_drivers+=" nvidia nvidia_modeset nvidia_uvm nvidia_drm "
