--- a/snippets/ha.yaml
+++ b/snippets/ha.yaml
@@ -4,8 +4,10 @@ repos:
 remove-from-packages:
   - [conntrack-tools, /etc/conntrackd/conntrackd.conf]
   - [keepalived, /etc/keepalived/keepalived.conf]
+  - [haproxy, /etc/haproxy/haproxy.cfg]
 
 packages:
   - keepalived
+  - haproxy
   - conntrack-tools
   - bird
