--- a/manifest-coreos.yaml
+++ b/manifest-coreos.yaml
@@ -4,6 +4,7 @@ include:
   - snippets/ha.yaml
   - snippets/kubernetes.yaml
   - snippets/release-coreos.yaml
+  - snippets/wifi.yaml
 
 exclude-packages:
   - python
