revert remove avahi

--- a/snippets/base.yaml
+++ b/snippets/base.yaml
@@ -82,6 +82,7 @@ packages:
   - systemd-networkd
   - ldns-utils
   - strace
+  - avahi
   - amd-gpu-firmware intel-gpu-firmware nvidia-gpu-firmware
 
 packages-x86_64:
