--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -16,22 +16,16 @@ jobs:
       image: quay.io/coreos-assembler/coreos-assembler:latest
     permissions:
       contents: read
-      packages: write
     steps:
     - name: Build and release image
       run: |
         set -xe
-
         COSA_SUPERMIN_MEMORY=4096
         VARIANT=coreos
 
         curl https://dl.min.io/client/mc/release/linux-amd64/mc \
-          --create-dirs -o $HOME/mc
-        chmod +x $HOME/mc
-
-        BUILD_PATH=$HOME/$VARIANT
-        mkdir -p $BUILD_PATH
-        cd $BUILD_PATH
+          --create-dirs -o mc
+        chmod +x mc
 
         cosa init -V $VARIANT \
           --force ${{ github.server_url }}/${{ github.repository }}.git
@@ -41,6 +35,6 @@ jobs:
         cosa buildextend-metal
         cosa buildextend-live
 
-        $HOME/mc cp -r -q --no-color \
-          $BUILD_PATH/builds/latest/x86_64/fedora-*-live* \
+        ./mc cp -r -q --no-color \
+          builds/latest/x86_64/fedora-*-live* \
           arc/data-boot/
