revert repository url

--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -28,7 +28,8 @@ jobs:
           --create-dirs -o mc
         chmod +x mc
 
-        cosa init -V $VARIANT --force ${{ github.repositoryUrl }}
+        cosa init -V $VARIANT \
+          --force ${{ github.server_url }}/${{ github.repository }}.git
         cosa clean
         cosa fetch
         cosa build metal4k
