--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -20,10 +20,35 @@ jobs:
     - name: Build and release image
       run: |
         set -xe
+        ## build custom keepalived ##
+
+        cd $HOME
+        sudo dnf install -y --setopt=install_weak_deps=False \
+          rpmdevtools \
+          dnf-plugins-core \
+          git-core \
+          libnftnl-devel \
+          createrepo
+
+        mkdir -p rpmbuild/
+        cd rpmbuild
+        git clone -b f$(rpm -E %fedora) https://src.fedoraproject.org/rpms/keepalived.git SOURCES/
+        cd SOURCES
+        spectool -gR keepalived.spec
+        sudo dnf builddep -y keepalived.spec
+        rpmbuild -bb keepalived.spec \
+          --without snmp \
+          --with nftables \
+          --without debug
+
+        find $HOME/rpmbuild/RPMS/ -type d -mindepth 1 -maxdepth 1 -exec createrepo '{}' \;
+
+        ## build image ##
+
+        cd $HOME
         COSA_SUPERMIN_MEMORY=4096
         VARIANT=coreos
 
-        cd $HOME
         curl https://dl.min.io/client/mc/release/linux-amd64/mc \
           --create-dirs -o mc
         chmod +x mc
@@ -35,6 +60,13 @@ jobs:
         cosa build metal4k
         cosa buildextend-metal
         cosa buildextend-live
+
+        ## push ##
+
+        cd $HOME
+        curl https://dl.min.io/client/mc/release/linux-amd64/mc \
+          --create-dirs -o mc
+        chmod +x mc
 
         ./mc cp -r -q --no-color \
           builds/latest/x86_64/fedora-*-live* \
