--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -16,13 +16,12 @@ jobs:
       image: quay.io/coreos-assembler/coreos-assembler:latest
     permissions:
       contents: read
+    defaults:
+      run:
+        working-directory: $HOME
     steps:
-    - name: Build and release image
+    - name: Install dependencies
       run: |
-        set -xe
-        ## build custom keepalived ##
-
-        cd $HOME
         sudo dnf install -y --setopt=install_weak_deps=False \
           rpmdevtools \
           dnf-plugins-core \
@@ -30,6 +29,15 @@ jobs:
           libnftnl-devel \
           createrepo
 
+        TARGETARCH=$(arch)
+        TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64}
+
+        curl https://dl.min.io/client/mc/release/linux-$TARGETARCH/mc \
+          --create-dirs -o mc
+        chmod +x mc
+
+    - name: Build keepalived package
+      run: |
         mkdir -p rpmbuild/
         cd rpmbuild
         git clone -b f$(rpm -E %fedora) https://src.fedoraproject.org/rpms/keepalived.git SOURCES/
@@ -41,18 +49,14 @@ jobs:
           --with nftables \
           --without debug
 
+    - name: Create local RPM repo
         find $HOME/rpmbuild/RPMS/ -type d -mindepth 1 -maxdepth 1 -exec createrepo '{}' \;
 
-        ## build image ##
-
-        cd $HOME
-        COSA_SUPERMIN_MEMORY=4096
-        VARIANT=coreos
-
-        curl https://dl.min.io/client/mc/release/linux-amd64/mc \
-          --create-dirs -o mc
-        chmod +x mc
-
+    - name: Build image
+      env:
+        COSA_SUPERMIN_MEMORY: 4096
+        VARIANT: coreos
+      run: |
         cosa init -V $VARIANT \
           --force ${{ github.server_url }}/${{ github.repository }}.git
         cosa clean
@@ -61,13 +65,8 @@ jobs:
         cosa buildextend-metal
         cosa buildextend-live
 
-        ## push ##
-
-        cd $HOME
-        curl https://dl.min.io/client/mc/release/linux-amd64/mc \
-          --create-dirs -o mc
-        chmod +x mc
-
+    - name: Push to MinIO
+      run: |
         ./mc cp -r -q --no-color \
           builds/latest/x86_64/fedora-*-live* \
           arc/data-boot/
