--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -18,7 +18,7 @@ jobs:
       contents: read
     defaults:
       run:
-        working-directory: $HOME
+        working-directory: ./
     steps:
     - name: Install dependencies
       run: |
