--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -17,8 +17,8 @@ jobs:
     permissions:
       contents: read
     defaults:
-      run:
-        working-directory: ./
+      run: |
+        cd $HOME
     steps:
     - name: Install dependencies
       run: |
@@ -51,7 +51,7 @@ jobs:
 
     - name: Create local RPM repo
       run: |
-        find $HOME/rpmbuild/RPMS/ -type d -mindepth 1 -maxdepth 1 -exec createrepo '{}' \;
+        find rpmbuild/RPMS/ -type d -mindepth 1 -maxdepth 1 -exec createrepo '{}' \;
 
     - name: Build image
       env:
