test rpm override and releasever override

--- a/snippets/release-coreos.yaml
+++ b/snippets/release-coreos.yaml
@@ -1,4 +1,4 @@
-releasever: "41"
+releasever: 40
 ref: fedora/${releasever}/${basearch}/coreos
 
 automatic-version-prefix: "${releasever}.<date:%Y%m%d>"
