--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -10,8 +10,6 @@ on:
       - v*
 
 env:
-  COSA_SUPERMIN_MEMORY: 4096
-  VARIANT: coreos
   # This needs to match releasever
   FEDORA_VERSION: 41
 
@@ -30,8 +28,7 @@ jobs:
           rpmdevtools \
           dnf-plugins-core \
           git-core \
-          libnftnl-devel \
-          createrepo
+          libnftnl-devel
 
         TARGETARCH=$(arch)
         TARGETARCH=${TARGETARCH/x86_64/amd64} && TARGETARCH=${TARGETARCH/aarch64/arm64}
@@ -54,25 +51,34 @@ jobs:
           --with nftables \
           --without debug
 
-    - name: Create local RPM repo
-      run: |
-        cd $HOME
-        find rpmbuild/RPMS/ -type d -mindepth 1 -maxdepth 1 -exec createrepo '{}' \;
-
-    - name: Build image
+    - name: Prepare build
+      env:
+        VARIANT: coreos
       run: |
         cd $HOME
         cosa init -V $VARIANT \
           --force ${{ github.server_url }}/${{ github.repository }}.git
-        cosa clean
-        cosa fetch
+
+        cat > src/config/override.yaml <<EOF
+        releasever: $FEDORA_VERSION
+        EOF
+
+        mkdir -p src/config/overrides/rpm
+        mv rpmbuild/RPMS/$(arch)/* src/config/overrides/rpm/
+
+    - name: Build image
+      env:
+        COSA_SUPERMIN_MEMORY: 4096
+      run: |
+        cosa fetch \
+          --with-cosa-overrides
         cosa build \
           --version=$FEDORA_VERSION.${{ github.head_ref || github.ref_name }} \
           metal4k
         cosa buildextend-metal
         cosa buildextend-live
 
-    - name: Push to MinIO
+    - name: Push image
       run: |
         cd $HOME
         ./mc cp -r -q --no-color \
