--- a/manifest-coreos.yaml
+++ b/manifest-coreos.yaml
@@ -5,6 +5,7 @@ include:
   - snippets/kubernetes.yaml
   - snippets/release-coreos.yaml
   - snippets/wifi.yaml
+  - override.yaml
 
 exclude-packages:
   - python
