--- a/snippets/ha.yaml
+++ b/snippets/ha.yaml
@@ -1,3 +1,6 @@
+repos:
+  - local-override
+
 remove-from-packages:
   - [conntrack-tools, /etc/conntrackd/conntrackd.conf]
   - [keepalived, /etc/keepalived/keepalived.conf]
