--- a/.github/workflows/tag-test.yaml
+++ b/.github/workflows/tag-test.yaml
@@ -35,5 +35,7 @@ jobs:
       run: |
         cd $HOME/src/config
 
+        git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+        git config --global user.name "${{ github.actor }}"
         git tag -a $BUILD_TAG
         git push origin $BUILD_TAG
