--- a/.github/workflows/tag-test.yaml
+++ b/.github/workflows/tag-test.yaml
@@ -37,5 +37,5 @@ jobs:
 
         git config --global user.email "${{ github.actor }}@users.noreply.github.com"
         git config --global user.name "${{ github.actor }}"
-        git tag -a $BUILD_TAG
+        git tag -a $BUILD_TAG -m "Build f$FEDORA_VERSION $BUILD_TAG"
         git push origin $BUILD_TAG
