--- a/.github/workflows/tag-test.yaml
+++ b/.github/workflows/tag-test.yaml
@@ -34,6 +34,7 @@ jobs:
     - name: Create tag
       run: |
         cd $HOME/src/config
+        echo "${{ github.actor }}"
 
         git config --global user.email "${{ github.actor }}@users.noreply.github.com"
         git config --global user.name "${{ github.actor }}"
