--- a/.github/workflows/tag-test.yaml
+++ b/.github/workflows/tag-test.yaml
@@ -39,4 +39,5 @@ jobs:
         git config --global user.email "${{ github.actor }}@users.noreply.github.com"
         git config --global user.name "${{ github.actor }}"
         git tag -a $BUILD_TAG -m "Build f$FEDORA_VERSION $BUILD_TAG"
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
         git push origin $BUILD_TAG
